@@ -71,7 +71,7 @@ public class Flow implements IDataSet, Copyable<Flow> {
 	}
 
 	public List<FlowPropertyRef> getFlowProperties() {
-		return flowProperties != null ? flowProperties : List.of();
+		return flowProperties != null ? flowProperties : Collections.emptyList();
 	}
 
 	public String getVersion() {
