@@ -83,7 +83,7 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public List<Ref> getPrecedingVersions() {
-		return precedingVersions != null ? precedingVersions : List.of();
+		return precedingVersions != null ? precedingVersions : Collections.emptyList();
 	}
 
 	public String getUri() {
@@ -107,7 +107,7 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public List<LangString> getAccessRestrictions() {
-		return accessRestrictions != null ? accessRestrictions : List.of();
+		return accessRestrictions != null ? accessRestrictions : Collections.emptyList();
 	}
 
 	public Other getOther() {
