@@ -55,15 +55,15 @@ public class Completeness implements Copyable<Completeness> {
 	}
 
 	public List<Ref> getSupportedImpactMethods() {
-		return supportedImpactMethods != null ? supportedImpactMethods : List.of();
+		return supportedImpactMethods != null ? supportedImpactMethods : Collections.emptyList();
 	}
 
 	public List<FlowCompletenessEntry> getEntries() {
-		return entries != null ? entries : List.of();
+		return entries != null ? entries : Collections.emptyList();
 	}
 
 	public List<LangString> getOtherDetails() {
-		return otherDetails != null ? otherDetails : List.of();
+		return otherDetails != null ? otherDetails : Collections.emptyList();
 	}
 
 	public Other getOther() {
