@@ -100,23 +100,23 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getSynonyms() {
-		return synonyms != null ? synonyms : List.of();
+		return synonyms != null ? synonyms : Collections.emptyList();
 	}
 
 	public List<Ref> getComplementingProcesses() {
-		return complementingProcesses != null ? complementingProcesses : List.of();
+		return complementingProcesses != null ? complementingProcesses : Collections.emptyList();
 	}
 
 	public List<Classification> getClassifications() {
-		return classifications != null ? classifications : List.of();
+		return classifications != null ? classifications : Collections.emptyList();
 	}
 
 	public List<LangString> getComment() {
-		return comment != null ? comment : List.of();
+		return comment != null ? comment : Collections.emptyList();
 	}
 
 	public List<Ref> getExternalDocs() {
-		return externalDocs != null ? externalDocs : List.of();
+		return externalDocs != null ? externalDocs : Collections.emptyList();
 	}
 
 	public Other getOther() {
