@@ -153,7 +153,7 @@ public class Exchange implements Copyable<Exchange> {
 	}
 
 	public List<AllocationFactor> getAllocations() {
-		return allocations != null ? allocations : List.of();
+		return allocations != null ? allocations : Collections.emptyList();
 	}
 
 	public String getDataSourceType() {
@@ -165,11 +165,11 @@ public class Exchange implements Copyable<Exchange> {
 	}
 
 	public List<Ref> getSources() {
-		return sources != null ? sources : List.of();
+		return sources != null ? sources : Collections.emptyList();
 	}
 
 	public List<LangString> getComment() {
-		return comment != null ? comment : List.of();
+		return comment != null ? comment : Collections.emptyList();
 	}
 
 	public Other getOther() {
