@@ -76,19 +76,19 @@ public class ProcessName implements Copyable<ProcessName> {
 	// region getters
 
 	public List<LangString> getBaseName() {
-		return baseName != null ? baseName : List.of();
+		return baseName != null ? baseName : Collections.emptyList();
 	}
 
 	public List<LangString> getTechnicalDetails() {
-		return technicalDetails != null ? technicalDetails : List.of();
+		return technicalDetails != null ? technicalDetails : Collections.emptyList();
 	}
 
 	public List<LangString> getMixAndLocation() {
-		return mixAndLocation != null ? mixAndLocation : List.of();
+		return mixAndLocation != null ? mixAndLocation : Collections.emptyList();
 	}
 
 	public List<LangString> getFlowProperties() {
-		return flowProperties != null ? flowProperties : List.of();
+		return flowProperties != null ? flowProperties : Collections.emptyList();
 	}
 
 	public Other getOther() {
