@@ -79,11 +79,11 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getName() {
-		return name != null ? name : List.of();
+		return name != null ? name : Collections.emptyList();
 	}
 
 	public List<Classification> getClassifications() {
-		return classifications != null ? classifications : List.of();
+		return classifications != null ? classifications : Collections.emptyList();
 	}
 
 	public String getCitation() {
@@ -95,15 +95,15 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getDescription() {
-		return description != null ? description : List.of();
+		return description != null ? description : Collections.emptyList();
 	}
 
 	public List<FileRef> getFiles() {
-		return files != null ? files : List.of();
+		return files != null ? files : Collections.emptyList();
 	}
 
 	public List<Ref> getContacts() {
-		return contacts != null ? contacts : List.of();
+		return contacts != null ? contacts : Collections.emptyList();
 	}
 
 	public Ref getLogo() {
